--- a/index.html
+++ b/index.html
@@ -504,7 +504,8 @@
                                             Illustration
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                    <button class="btn btn-primary btn-xl text-uppercase" href="https://www.youtube.com/watch?v=uGzToPCX8nU&list=PLkynsxDYXZVyBn3pxYFWMRV5oeOTyjBVc
+" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Close Project
                                     </button>
