--- a/index.html
+++ b/index.html
@@ -505,9 +505,9 @@
                                         </li>
                                     </ul>
                                     <a class="btn btn-primary btn-xl text-uppercase" href="https://www.youtube.com/watch?v=uGzToPCX8nU&list=PLkynsxDYXZVyBn3pxYFWMRV5oeOTyjBVc
-											   " type="button"></a>
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+											   " type="button">Close Project</a>
+                                       
+                                        
                                     </button>
                                 </div>
                             </div>
