--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                     <div class="embed-responsive embed-responsive-16by9">
 										<iframe class="embed-responsive-item" src="//www.youtube.com/embed/ckRXWKFGKzA" allowfullscreen="true"></iframe>
 									</div>
-                                    <p>thical hacking merupakan aktivitas peretasan yang tujuannya untuk memperkuat keamanan sistem. Dalam prosesnya, peretasan dilakukan dengan cara mencari celah atau kelemahan pada sebuah jaringan, baik komputer, aplikasi, maupun website. Celah yang ditemukan ini kemudian dilaporkan ke pihak perusahaan agar dapat segera diperbaiki serta terhindar dari berbagai ancaman serangan cyber.</p>
+                                    <p>Ethical hacking merupakan aktivitas peretasan yang tujuannya untuk memperkuat keamanan sistem. Dalam prosesnya, peretasan dilakukan dengan cara mencari celah atau kelemahan pada sebuah jaringan, baik komputer, aplikasi, maupun website. Celah yang ditemukan ini kemudian dilaporkan ke pihak perusahaan agar dapat segera diperbaiki serta terhindar dari berbagai ancaman serangan cyber.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
